# RSF

./: .gitignore  DX_IMPROVEMENTS.md  MIDDLEWARE_GUIDE.md  README.md  WEBSOCKET_GUIDE.md  replit.md
cli/: Cargo.toml  README.md  build.rs
cli/src/: main.rs
core/: Cargo.toml  DEVELOPER_EXPERIENCE.md  DYNAMIC_ROUTING_FIX.md  build.rs
core/benches/: optimized_routing.rs
core/example/: main.rs
core/example/posts/[id]/comments/: [commentId].rs
core/example/users/: [id].rs
core/src/: logger.rs  main.rs
core/src/engine/: auth.rs  config.rs  devx.rs  error.rs  errors.rs  extractors.rs  generated_routes.rs  handler.rs  helpers.rs  hot_reload.rs  middleware.rs  mod.rs  mw.rs  parser.rs  project.json  request.rs  runtime.rs  server.rs  server_hyper.rs  static_files.rs  websocket.rs  ws.rs
example/: api.rs  improved_dx.rs  index.rs  middleware_demo.rs  posts.rs  search.rs  static.rs  stats.rs  ws_demo.rs
example/api/: large-data.rs  upload.rs
example/api/admin/: users.rs
example/api/public/: data.rs
example/auth/: login.rs
example/improved_dx/: [id].rs
example/posts/: [id].rs
example/ws/: chat.rs
