[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
tokio = { version = "1", features = ["full"] }
percent-encoding = "2"
hyper = { version = "0.14", optional = true, features = ["full"] }
bytes = "1"
dashmap = "5"

[features]
use_hyper = ["hyper"]

[build-dependencies]
serde_json = "1.0"
