[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
tokio = { version = "1", features = ["full"] }
percent-encoding = "2"
hyper = { version = "0.14", optional = true, features = ["full"] }
bytes = "1"
dashmap = "5"
log = "0.4"
env_logger = "0.10"
ahash = "0.8"
smallvec = "1.13"
once_cell = "1.19"
notify = "6.1"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
use_hyper = ["hyper"]

[build-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
